Cleaning up warnings. Lots of adding types in ERDDAP code, and removing unused variables in test code.